[project]
name = "passlib-fork"
version = "1.7.4-2"
description = "comprehensive password hashing framework supporting over 30 schemes"
keywords = ["password secret hash security\ncrypt md5-crypt\nsha256-crypt sha512-crypt pbkdf2 argon2 scrypt bcrypt\napache htpasswd htdigest\ntotp 2fa"]
authors = [
    { name = "Eli Collins", email = "elic@assurancetechnologies.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: Jython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
license = { text = "BSD" }
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Yolley/passlib-fork"

[project.optional-dependencies]
argon2 = [
    "argon2_cffi>=18.2.0",
]
bcrypt = [
    "bcrypt>=3.1.0",
]
totp = [
    "cryptography",
]
build_docs = [
    "cloud_sptheme>=1.10.1",
    "sphinx>=1.6",
    "sphinxcontrib-fulltoc>=1.2.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
